# zipzap

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
bash/: z.sh
fish/conf.d/: z.fish
src/: main.rs
zsh/: z.zsh
