[package]
name = "zipzap"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
description = "Directory tracker for easy jumping"
repository = "https://github.com/mkeeter/zipzap"

[dependencies]
anyhow          = { version = "1.0.101" }
camino          = { version = "1.2.2"   }
clap            = { version = "4.5.58", features = ["derive"] }
directories     = { version = "6.0.0"   }
locked-tripwire = { version = "0.1.1"   }
rusqlite        = { version = "0.38.0", features = ["bundled"] }
sysinfo         = { version = "0.38.1", default-features = false, features = ["system"] }
tempfile        = { version = "3.25.0" }

[profile.release]
lto = true
overflow-checks = true
codegen-units = 1
